@@ -299,8 +299,8 @@ public class Vector {
    * @return This vector after clamping.
    */
   public Vector clamp(int min, int max) {
-    this.x = Math.min(max, Math.max(min, x));
-    this.y = Math.min(max, Math.max(min, y));
+    this.x = Math.clamp(this.x, min, max);
+    this.y = Math.clamp(this.y, min, max);
 
     return this;
   }
@@ -314,8 +314,8 @@ public class Vector {
    * @return This vector after clamping.
    */
   public Vector clamp(Vector min, Vector max) {
-    this.x = Math.min(max.getX(), Math.max(min.getX(), x));
-    this.y = Math.min(max.getY(), Math.max(min.getY(), y));
+    this.x = Math.clamp(this.x, min.getX(), max.getX());
+    this.y = Math.clamp(this.y, min.getY(), max.getY());
 
     return this;
   }
@@ -692,5 +692,29 @@ public class Vector {
    */
   public static Vector multiplyByMatrix(Vector vec, Matrix2x2 matrix) {
     return matrix.multiplyByVector(vec);
+  }
+
+  /**
+   * Creates a new vector by cloning the provided vector and clamping its components to be within the specified range.
+   *
+   * @param vector The vector to be cloned and clamped.
+   * @param min    The minimum value for each component.
+   * @param max    The maximum value for each component.
+   * @return A new vector with clamped components.
+   */
+  public static Vector clamp(Vector vector, int min, int max) {
+    return vector.clone().clamp(min, max);
+  }
+
+  /**
+  * Creates a new vector by cloning the provided vector and clamping its components to be within the specified range.
+  *
+  * @param vector The vector to be cloned and clamped.
+  * @param min    The minimum vector values for each component.
+  * @param max    The maximum vector values for each component.
+  * @return A new vector with clamped components.
+  */
+  public static Vector clamp(Vector vector, Vector min, Vector max) {
+    return vector.clone().clamp(min, max);
   }
 }
